tests/errors/DoubleParseError.rcm
// fail (expect two errors)
fn main() void {
	let a: [1.3 + 1.7] = 3
	let b = 1 + 3
}
